--- a/lesson_2_reading_and_plotting_stock_data/example.ipynb
+++ b/lesson_2_reading_and_plotting_stock_data/example.ipynb
@@ -128,6 +128,18 @@
     "df['Adj. Close*'].plot()\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot two columns\n",
+    "\n",
+    "df[['Close', 'Adj. Close*']].plot()\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
