--- a/lesson_6_incomplete_data/example.ipynb
+++ b/lesson_6_incomplete_data/example.ipynb
@@ -26,6 +26,7 @@
    "source": [
     "## Why this is bad? what can we do?\n",
     "---\n",
+    "![](img/4.png)\n",
     "![](img/3.png)\n"
    ]
   },
