--- a/lesson_6_incomplete_data/example.ipynb
+++ b/lesson_6_incomplete_data/example.ipynb
@@ -24,9 +24,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Why this is bad? what can we do?\n",
+    "## Why this is bad? \n",
     "---\n",
-    "![](img/4.png)\n",
+    "![](img/4.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## what can we do?\n",
+    "---\n",
     "![](img/3.png)\n"
    ]
   },
